# routes/api.php
@@ -17,4 +17,6 @@ Route::prefix('/v1')->namespace('Api\V1')->group(function () {
     Route::post('send_sms', [\App\Http\Controllers\Api\V1\AuthApiController::class, 'sendSms']);
     Route::post('check_sms_code', [\App\Http\Controllers\Api\V1\AuthApiController::class, 'checkSmsCode']);
     Route::post('register', [\App\Http\Controllers\Api\V1\AuthApiController::class, 'register']);
+    Route::get('home_page', [\App\Http\Controllers\Api\V1\HomePageController::class, 'homePage']);
+
 });
